--- a/AppCenterTest/AppCenterTest.iOS/packages.config
+++ b/AppCenterTest/AppCenterTest.iOS/packages.config
@@ -4,4 +4,5 @@
   <package id="Microsoft.AppCenter.Analytics" version="1.0.1" targetFramework="xamarinios10" />
   <package id="Microsoft.AppCenter.Crashes" version="1.0.1" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.4.0.280" targetFramework="xamarinios10" />
+  <package id="Xamarin.TestCloud.Agent" version="0.21.3" targetFramework="xamarinios10" />
 </packages>
